--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div class="d1">
           <a href="https://lush-green.github.io/henan/" target="_blank">
             <img
-              src="https://s1.328888.xyz/2022/09/03/1EASE.jpg"
+              src="https://s1.328888.xyz/2022/09/05/1SKCE.jpg"
               alt="河南省百科"
             />
           </a>
