--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           border-top: 10px groove rgb(236, 232, 232);
         "
       />
-      <p id="w2"><i>一个只会C--V的菜鸟</i></p>
+      <p id="w2"><i>一个初学者</i></p>
     </div>
     <div id="projects">
       <h2>来吧，展示！<br />🡇 🡇 🡇</h2>
