--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       </div>
       <div></div>
     </div>
-    <div class="lianxi">
+    <div id="lianxi" class="lianxi">
       <h3 class="l1">联系我吧！</h3>
       <div class="lianxi-box">
         <a
