--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
       <div id="navbar">
         <ul id="nav">
           <li>
-            <a id="top" href="#welcome-section"><b>欢迎</b></a>
+            <a id="top1" href="#welcome-section"><b>欢迎</b></a>
           </li>
           <li>
-            <a id="top" href="#projects"><b>作品</b></a>
+            <a id="top2" href="#projects"><b>作品</b></a>
           </li>
           <li>
-            <a id="top" href="#lianxi"><b>联系</b></a>
+            <a id="top3" href="#lianxi"><b>联系</b></a>
           </li>
         </ul>
       </div>
