--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="赵阳阳,个人展示页,zhaoyangyang,yangyang.">
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="./font/iconfont.css" />
-    <title>展示页</title>
+    <title>赵阳阳</title>
   </head>
   <body>
     <div id="bar">
